# scrumdo-mcp

./: .env.template  .gitignore  .pre-commit-config.yaml  AI_COCKPIT_BRIDGE_SPEC.md  AI_PLATFORM_LOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
spryng_mcp/: __init__.py  client.py  config.py  server.py
spryng_mcp/cli/: main.py  output.py
spryng_mcp/tools/: __init__.py  activity.py  agent_runs.py  agents.py  attachments.py  blockers.py  boards.py  cards.py  cockpit.py  commands.py  comments.py  fields.py  github.py  intelligence.py  loops.py  members.py  memory.py  notifications.py  search.py  spec.py  spec_proposals.py  tasks.py  time_tracking.py  webhooks.py
tests/: test_agent_run_review_tools.py  test_cockpit_tools.py  test_command_tools.py  test_loop_tools.py  test_memory_notification_tools.py  test_run_context_header.py  test_spec_docs_tools.py  test_spec_proposal_tools.py  test_tools.py
